# Candle

./: .gitignore  CMakeLists.txt  README.md  demo.cpp
src/: DirectedLight.cpp  LightingArea.cpp  Line.cpp  RadialLight.cpp
